--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ body {
     background: var(--bg-white);
     color: var(--text-black);
     overflow-x: hidden;
-    transition: all 0.3s;
     scroll-padding-top: 30rem;
 }
 
@@ -131,9 +130,29 @@ a:hover {
     margin: 2rem auto;
     text-align: center;
 }
-/* .padding-top{
-    padding-top: 65px;
-} */
+
+/* =======================================
+                   preloader
+   ======================================= */
+
+   #preloader{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color:#fff;
+    width: 100%;
+    height: 100vh;
+    z-index: 9999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#status img{
+    width: 60px;
+    height: 60px;
+}
 
 /* =======================================
                    header
